# SmallBasicLLVM

./: CMakeLists.txt  LICENSE
.github/workflows/: build.yml
src/: diagnostic.hpp  main.cpp
src/codegen/: codegen.cpp  codegen.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/linker/: linker.cpp  linker.hpp
src/parser/: ast.cpp  ast.hpp  parser.cpp  parser.hpp
src/registry/: registry.hpp
src/semantic/: semantic.cpp  semantic.hpp
src/std/: array.cpp  clock.cpp  main.cpp  main.h  math.cpp  program.cpp  registry.hpp  textwindow.cpp  value.cpp  value.hpp
